Perform style refactoring based on code inspection