@@ -15,7 +15,6 @@ import com.linkedin.kafka.cruisecontrol.model.LinearRegressionModelParameters;
 import com.linkedin.kafka.cruisecontrol.monitor.LoadMonitorState;
 import com.linkedin.cruisecontrol.servlet.parameters.CruiseControlParameters;
 import com.linkedin.kafka.cruisecontrol.servlet.parameters.CruiseControlStateParameters;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -97,7 +96,7 @@ public class CruiseControlState extends AbstractCruiseControlResponse {
       for (Map.Entry<Long, Float> entry : _monitorState.monitoredWindows().entrySet()) {
         joiner.add(String.format("%d=%.3f%%", entry.getKey(), entry.getValue() * 100));
       }
-      sb.append(joiner.toString());
+      sb.append(joiner);
     }
   }
 
@@ -204,7 +203,7 @@ public class CruiseControlState extends AbstractCruiseControlResponse {
   public enum SubState {
     ANALYZER, MONITOR, EXECUTOR, ANOMALY_DETECTOR;
 
-    protected static final List<SubState> CACHED_VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    protected static final List<SubState> CACHED_VALUES = List.of(values());
 
     /**
      * Use this instead of values() because values() creates a new array each time.
